@@ -2,8 +2,6 @@ package ru.job4j.list;
 
 import org.junit.Test;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.core.Is.is;
@@ -15,13 +13,15 @@ import static org.junit.Assert.assertThat;
  * @author Natasha Panchina (panchinanata25@gmail.com)
  * @version 1
  * @since 20.09.2018
+ * @version 2
+ * @since 20.12.2018
  */
 public class ConvertList2ArrayTest {
     @Test
     public void when7ElementsThen9() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6, 7),
+                List.of(1, 2, 3, 4, 5, 6, 7),
                 3
         );
         int[][] expect = {
@@ -36,7 +36,7 @@ public class ConvertList2ArrayTest {
     public void when10ElementsThen10() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9, 10),
+                List.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10),
                 5
         );
         int[][] expect = {
@@ -52,12 +52,12 @@ public class ConvertList2ArrayTest {
     @Test
     public void when3ArraysThenReturnList() {
         ConvertList2Array convertList = new ConvertList2Array();
-        List<int[]> list = new ArrayList();
-        list.add(new int[]{1, 2});
-        list.add(new int[]{3, 4, 5, 6});
-        list.add(new int[]{7, 8, 9});
-        List<Integer> result = convertList.convert(list);
-        List<Integer> expected = Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9);
-        assertThat(result, is(expected));
+        List<int[]> list = List.of(
+                new int[]{1, 2},
+                new int[]{3, 4, 5, 6},
+                new int[]{7, 8, 9}
+        );
+        List<Integer> expected = List.of(1, 2, 3, 4, 5, 6, 7, 8, 9);
+        assertThat(convertList.convert(list), is(expected));
     }
 }
