@@ -2,7 +2,6 @@ package ru.job4j.list;
 
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.core.Is.is;
@@ -14,6 +13,8 @@ import static org.junit.Assert.assertThat;
  * @author Natasha Panchina (panchinanata25@gmail.com)
  * @version 1
  * @since 20.09.2018
+ * @version 2
+ * @since 20.12.2018
  */
 public class ConvertMatrix2ListTest {
     @Test
@@ -25,10 +26,7 @@ public class ConvertMatrix2ListTest {
                 {5, 6},
                 {7, 8}
         };
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4, 5, 6, 7, 8
-        );
-        List<Integer> result = list.toList(input);
-        assertThat(result, is(expect));
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6, 7, 8);
+        assertThat(list.toList(input), is(expect));
     }
 }
